--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@storybook/react": "^6.4.9",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.2.7",
+    "@mui/system": "^5.2.6",
+    "@storybook/react": "^6.5.0-alpha.10",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -15,6 +19,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.1.0",
     "sass": "^1.46.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
@@ -56,12 +61,12 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^6.4.9",
-    "@storybook/addon-essentials": "^6.4.9",
-    "@storybook/addon-links": "^6.4.9",
-    "@storybook/builder-webpack5": "^6.4.9",
-    "@storybook/manager-webpack5": "^6.4.9",
-    "@storybook/node-logger": "^6.4.9",
+    "@storybook/addon-actions": "^6.5.0-alpha.10",
+    "@storybook/addon-essentials": "^6.5.0-alpha.10",
+    "@storybook/addon-links": "^6.5.0-alpha.10",
+    "@storybook/builder-webpack5": "^6.5.0-alpha.10",
+    "@storybook/manager-webpack5": "^6.5.0-alpha.10",
+    "@storybook/node-logger": "^6.5.0-alpha.10",
     "@storybook/preset-create-react-app": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
